feat(tribute-page): html complete

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -2,9 +2,98 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Tribute Page</title>
 </head>
 <body>
-
+<div id="main">
+    <header>
+        <h1 id="title">Erwin Schrödinger</h1>
+        <p><em>(1887–1961)</em></p>
+        <p>
+            <strong>Erwin Schrödinger</strong> was a <u>Nobel Prize-winning</u> Austrian physicist
+            whose groundbreaking wave equation changed the face of <u>quantum theory</u>.
+        </p>
+    </header>
+    <figure id="img-div">
+        <img id="image" src="Erwin-Schrödinger.jpg" alt="Erwin-Schrödinger">
+        <figcaption id="img-caption">
+            Austrian physicist Erwin Schrödinger was a noted theoretical physicist and scholar
+            who came up with a groundbreaking wave equation for electron movements.
+            He was awarded the 1933 Nobel Prize in Physics,
+            along with British physicist P.A.M. Dirac,
+            and later became a director at Ireland's Institute for Advanced Studies.
+        </figcaption>
+    </figure>
+    <article>
+        <h2 id="tribute-info">Biography</h2>
+        <section>
+            <h3>Early Life and Education</h3>
+            <p>
+                Schrödinger was born on August 12, 1887, in Vienna, Austria, the only child of botanist and oil cloth
+                factory owner Rudolf Schrödinger and Georgine Emilia Brenda, daughter of Alexander Bauer, Rudolf's
+                professor of chemistry at the Technical College of Vienna (Technische Hochschule Vienna). Schrödinger
+                was taught at home by private teachers until he was 11 years old, and then attended Vienna's
+                Akademisches Gymnasium. He went on to enter the University of Vienna, where he focused primarily on the
+                study of physics and was strongly influenced by another young physicist, Fritz Hasenöhrl, and graduated
+                with a Ph.D. in physics in 1910. Afterward, he worked for a few years at the institution as an assistant
+                but was drafted into World War I in 1914, serving with Austro-Hungarian military forces in Italy as an
+                artillery officer.Upon returning to civilian life, Schrödinger married Annemarie Bertel in 1920. He also
+                took on a number of faculty/staff positions at places like the University of Stuttgart, the University
+                of Jena and the University of Breslau, before joining the University of Zurich in 1921.
+            </p>
+        </section>
+        <section>
+            <h3>The Schrödinger Wave Equation</h3>
+            <p>
+                Schrödinger's tenure as a professor at the University of Zurich over the next six years would prove to
+                be one of the most important periods of his physics career. Immersing himself in an array of theoretical
+                physics research, Schrödinger came upon the work of fellow physicist Louis de Broglie in 1925. In his
+                1924 thesis, de Broglie had proposed a theory of wave mechanics. This sparked Schrödinger's interest in
+                explaining that an electron in an atom would move as a wave. The following year, he wrote a
+                revolutionary paper that highlighted what would be known as the Schrödinger wave equation.Following the
+                atomic model of Niels Bohr and a thesis from de Broglie, Schrödinger articulated the movements of
+                electrons in terms of wave mechanics as opposed to particle leaps. He provided a mode of thought to
+                scientists that would become accepted and incorporated into thousands of papers, becoming an important
+                cornerstone of quantum theory. Schrödinger made this discovery in his late 30s, with most theoretical
+                physicists sharing groundbreaking finds in their 20s.
+            </p>
+        </section>
+        <section>
+            <h3>Nobel Prize Winner</h3>
+            <p>
+                In 1927, Schrödinger left his position at Zurich for a new, prestigious opportunity at the University of
+                Berlin, where he met Albert Einstein. He held this position until 1933, opting to leave upon the rise of
+                Adolf Hitler's Nazi Party and the related persecution of Jewish citizens. Shortly after joining the
+                faculty of Oxford University in England, Schrödinger learned that he had won the 1933 Nobel Prize in
+                Physics, sharing the award with another quantum theorist, Paul A.M. Dirac. In his Nobel Prize acceptance
+                speech, Schrödinger stated that his mentor, Hasenöhrl, would be accepting the award if he hadn't died
+                during World War I.
+                Following a three-year stay at Oxford, Schrödinger traveled and worked in different countries, including
+                in Austria at the University of Graz. In 1939, he was invited by Irish Prime Minister Eamon de Valera to
+                work at the Institute for Advanced Studies in Dublin, Ireland, heading its School for Theoretical
+                Physics. He remained in Dublin until the mid-1950s, returning in 1956 to Vienna, where he continued his
+                career at his alma mater.
+            </p>
+        </section>
+        <section>
+            <h3>Books, Final Years and Death</h3>
+            <p>
+                In terms of his writing, Schrödinger published the influential book What Is Life?, his attempt to link
+                quantum physics and genetics, in 1944. He was also versed in philosophy and metaphysics, as evidenced in
+                Nature and the Greeks (1954), which looked at ancient belief systems and inquiries; and his final book,
+                My View of the World (1961), inspired by the Vedanta and exploring belief in a unified consciousness.
+                Schrödinger died on January 4, 1961, in his hometown of Vienna. A 1989 book on his life was written by
+                professor Walter J. Moore—Schrödinger: Life and Thought.
+            </p>
+        </section>
+    </article>
+    <footer>
+        <p>Read More: </p>
+        <a id="tribute-link" href="https://en.wikipedia.org/wiki/Erwin_Schrödinger" target="_blank">
+            Wikipedia - Erwin Schrödinger
+        </a>
+    </footer>
+</div>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </body>
 </html>
