feat(tribute-page): css complete

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -3,28 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <title>Tribute Page</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 <div id="main">
     <header>
-        <h1 id="title">Erwin Schrödinger</h1>
-        <p><em>(1887–1961)</em></p>
-        <p>
+        <div class="title">
+            <h1 id="title">Erwin Schrödinger</h1>
+            <p><em>(1887–1961)</em></p>
+        </div>
+        <p id="description" class="box">
             <strong>Erwin Schrödinger</strong> was a <u>Nobel Prize-winning</u> Austrian physicist
             whose groundbreaking wave equation changed the face of <u>quantum theory</u>.
         </p>
     </header>
-    <figure id="img-div">
+    <figure id="img-div" class="box">
         <img id="image" src="Erwin-Schrödinger.jpg" alt="Erwin-Schrödinger">
         <figcaption id="img-caption">
-            Austrian physicist Erwin Schrödinger was a noted theoretical physicist and scholar
-            who came up with a groundbreaking wave equation for electron movements.
-            He was awarded the 1933 Nobel Prize in Physics,
-            along with British physicist P.A.M. Dirac,
-            and later became a director at Ireland's Institute for Advanced Studies.
+            <em>
+                Austrian physicist Erwin Schrödinger was a noted theoretical physicist and scholar
+                who came up with a groundbreaking wave equation for electron movements.
+                He was awarded the 1933 Nobel Prize in Physics,
+                along with British physicist P.A.M. Dirac,
+                and later became a director at Ireland's Institute for Advanced Studies.
+            </em>
         </figcaption>
     </figure>
-    <article>
+    <article class="box">
         <h2 id="tribute-info">Biography</h2>
         <section>
             <h3>Early Life and Education</h3>
@@ -37,7 +42,10 @@
                 study of physics and was strongly influenced by another young physicist, Fritz Hasenöhrl, and graduated
                 with a Ph.D. in physics in 1910. Afterward, he worked for a few years at the institution as an assistant
                 but was drafted into World War I in 1914, serving with Austro-Hungarian military forces in Italy as an
-                artillery officer.Upon returning to civilian life, Schrödinger married Annemarie Bertel in 1920. He also
+                artillery officer.
+            </p>
+            <p>
+                Upon returning to civilian life, Schrödinger married Annemarie Bertel in 1920. He also
                 took on a number of faculty/staff positions at places like the University of Stuttgart, the University
                 of Jena and the University of Breslau, before joining the University of Zurich in 1921.
             </p>
@@ -50,7 +58,10 @@
                 physics research, Schrödinger came upon the work of fellow physicist Louis de Broglie in 1925. In his
                 1924 thesis, de Broglie had proposed a theory of wave mechanics. This sparked Schrödinger's interest in
                 explaining that an electron in an atom would move as a wave. The following year, he wrote a
-                revolutionary paper that highlighted what would be known as the Schrödinger wave equation.Following the
+                revolutionary paper that highlighted what would be known as the Schrödinger wave equation.
+            </p>
+            <p>
+                Following the
                 atomic model of Niels Bohr and a thesis from de Broglie, Schrödinger articulated the movements of
                 electrons in terms of wave mechanics as opposed to particle leaps. He provided a mode of thought to
                 scientists that would become accepted and incorporated into thousands of papers, becoming an important
@@ -68,6 +79,8 @@
                 Physics, sharing the award with another quantum theorist, Paul A.M. Dirac. In his Nobel Prize acceptance
                 speech, Schrödinger stated that his mentor, Hasenöhrl, would be accepting the award if he hadn't died
                 during World War I.
+            </p>
+            <p>
                 Following a three-year stay at Oxford, Schrödinger traveled and worked in different countries, including
                 in Austria at the University of Graz. In 1939, he was invited by Irish Prime Minister Eamon de Valera to
                 work at the Institute for Advanced Studies in Dublin, Ireland, heading its School for Theoretical
@@ -82,12 +95,14 @@
                 quantum physics and genetics, in 1944. He was also versed in philosophy and metaphysics, as evidenced in
                 Nature and the Greeks (1954), which looked at ancient belief systems and inquiries; and his final book,
                 My View of the World (1961), inspired by the Vedanta and exploring belief in a unified consciousness.
+            </p>
+            <p>
                 Schrödinger died on January 4, 1961, in his hometown of Vienna. A 1989 book on his life was written by
                 professor Walter J. Moore—Schrödinger: Life and Thought.
             </p>
         </section>
     </article>
-    <footer>
+    <footer class="box">
         <p>Read More: </p>
         <a id="tribute-link" href="https://en.wikipedia.org/wiki/Erwin_Schrödinger" target="_blank">
             Wikipedia - Erwin Schrödinger
