--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Tribute Page</title>
+    <title>Tribute Page - Erwin Schrödinger</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
