--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -110,5 +110,8 @@
     </footer>
 </div>
 <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<script>
+    const projectName = 'tribute-page';
+</script>
 </body>
 </html>
