test(*): close test

--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -109,7 +109,7 @@
         </a>
     </footer>
 </div>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'tribute-page';
 </script>
