--- a/Survey-Form/index.html
+++ b/Survey-Form/index.html
@@ -9,7 +9,7 @@
 <main>
     <header>
         <h1 id="title">Wealth Questionnaire - Questionnaire Form</h1>
-        <p id="description">Measure your Wealth level to help you succeed</p>
+        <p id="description">Measure your income level to help increase your wealth</p>
     </header>
     <div class="container">
         <form id="survey-form">
@@ -112,7 +112,7 @@
         </form>
     </div>
 </main>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'survey-form';
 </script>
