--- a/Product-Landing-Page/index.html
+++ b/Product-Landing-Page/index.html
@@ -231,9 +231,10 @@
             allowfullscreen
     ></iframe>
 </footer>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'product-landing-page';
+    const imgPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/Product-Landing-Page/img/banner.jpg';
 </script>
 </body>
 </html>
