docs(readme): add project names

--- a/Survey-Form/index.html
+++ b/Survey-Form/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Survey Form</title>
+    <title>Survey Form - Wealth Questionnaire</title>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
