--- a/Technical-Docs-Page/index.html
+++ b/Technical-Docs-Page/index.html
@@ -270,5 +270,9 @@
         <hr class="mark-hr">
     </article>
 </main>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<script>
+    const projectName = 'technical-docs-page';
+</script>
 </body>
 </html>
