--- a/Technical-Docs-Page/index.html
+++ b/Technical-Docs-Page/index.html
@@ -282,7 +282,7 @@
         </section>
     </article>
 </main>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
+<!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'technical-docs-page';
 </script>
