docs(readme): update docs

--- a/Technical-Docs-Page/index.html
+++ b/Technical-Docs-Page/index.html
@@ -285,6 +285,7 @@
 <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'technical-docs-page';
+    const imgPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/Technical-Docs-Page/img/markdown.svg',
 </script>
 </body>
 </html>
