--- a/Product-Landing-Page/index.html
+++ b/Product-Landing-Page/index.html
@@ -233,7 +233,21 @@
 <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'product-landing-page';
-    const imgPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/Product-Landing-Page/img/banner.jpg';
+    const env = 'LOCAL'    // LOCAL | CLOUD
+    const dirName = 'Product-Landing-Page'
+    const cloudPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/' + dirName + '/img/';
+    (function cloudPics() {
+        function chore() {
+            document.querySelectorAll('img').forEach(img => {
+                console.log(img.getAttribute('src'))
+                let src = img.getAttribute('src').replace('./img/', cloudPath)
+                img.setAttribute('src', src)
+            });
+        }
+        if (env === 'CLOUD') {
+            chore()
+        }
+    })()
 </script>
 </body>
 </html>
