--- a/Technical-Docs-Page/index.html
+++ b/Technical-Docs-Page/index.html
@@ -285,7 +285,22 @@
 <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'technical-docs-page';
-    const imgPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/Technical-Docs-Page/img/markdown.svg'
+    const env = 'LOCAL'    // LOCAL | CLOUD
+    const dirName = 'Technical-Docs-Page'
+    const cloudPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/' + dirName + '/img/';
+    (function cloudPics() {
+        function chore() {
+            document.querySelectorAll('img').forEach(img => {
+                console.log(img.getAttribute('src'))
+                let src = img.getAttribute('src').replace('./img/', cloudPath)
+                img.setAttribute('src', src)
+            });
+        }
+        if (env === 'CLOUD') {
+            chore()
+        }
+    })()
+
 </script>
 </body>
 </html>
