--- a/Tribute-Page/index.html
+++ b/Tribute-Page/index.html
@@ -18,7 +18,7 @@
         </p>
     </header>
     <figure id="img-div" class="box">
-        <img id="image" src="Erwin-Schrödinger.jpg" alt="Erwin-Schrödinger">
+        <img id="image" src="./img/Erwin-Schrödinger.jpg" alt="Erwin-Schrödinger">
         <figcaption id="img-caption">
             <em>
                 Austrian physicist Erwin Schrödinger was a noted theoretical physicist and scholar
@@ -112,6 +112,21 @@
 <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
 <script>
     const projectName = 'tribute-page';
+    const env = 'LOCAL'    // LOCAL | CLOUD
+    const dirName = 'Tribute-Page'
+    const cloudPath = 'https://raw.githubusercontent.com/louisyoungx/freeCodeCamp-projects/master/' + dirName + '/img/';
+    (function cloudPics() {
+        function chore() {
+            document.querySelectorAll('img').forEach(img => {
+                console.log(img.getAttribute('src'))
+                let src = img.getAttribute('src').replace('./img/', cloudPath)
+                img.setAttribute('src', src)
+            });
+        }
+        if (env === 'CLOUD') {
+            chore()
+        }
+    })()
 </script>
 </body>
 </html>
