--- a/Personal-Portfolio/index.html
+++ b/Personal-Portfolio/index.html
@@ -69,7 +69,7 @@
 </main>
 <footer>
     <h5>Personal Portfolio - Louis Young</h5>
-    <h6>Copyright © 2021 Apple Inc. All rights reserved.</h6>
+    <h6>Copyright © 2021 LouisYoung Inc. All rights reserved.</h6>
 </footer>
 <script src="./index.js"></script>
 <!--<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>-->
