perf(techinical-docs): mobile page

--- a/Technical-Docs-Page/index.html
+++ b/Technical-Docs-Page/index.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <title>Technical Documentation Page - MarkDown</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mark.css">
 </head>
 <body>
 <nav id="navbar">
-    <header class="nav-header flex-center">
-        <img alt="MarkDown" src="./img/markdown.svg">
+    <header class="nav-header flex-center nav-back">
+        <div class="nav-header flex-center nav-tag">
+            <img class="nav-img" alt="MarkDown" src="./img/markdown.svg">
+        </div>
     </header>
     <div class="nav-items">
         <div class="nav-link-container">
