fix/perf(personal-portfolio): fix hover display top of nav and perf nav click area

--- a/Personal-Portfolio/index.html
+++ b/Personal-Portfolio/index.html
@@ -12,14 +12,14 @@
         <a href="https://louisyoung.work/">
             <img id="logo" src="./img/LOUIS-LOGO-BLANK.gif" alt="logo"></a>
         <ul class="nav-list">
-            <li class="nav-item">
-                <a href="#welcome-section">About</a>
+            <li>
+                <a class="nav-item" href="#welcome-section">About</a>
             </li>
-            <li class="nav-item">
-                <a href="#projects">Work</a>
+            <li>
+                <a class="nav-item" href="#projects">Work</a>
             </li>
-            <li class="nav-item">
-                <a href="#contact">Contact</a>
+            <li>
+                <a class="nav-item" href="#contact">Contact</a>
             </li>
         </ul>
     </nav>
